[gd_scene load_steps=5 format=1]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/Imported Fonts/BlockMainTitle.fnt" type="BitmapFont" id=2]
[ext_resource path="res://Scenes/StoneButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Fonts/Imported Fonts/BlockTitle.fnt" type="BitmapFont" id=4]

[node name="GUIController" type="Node2D"]

script/script = ExtResource( 1 )

[node name="MainMenu" type="CenterContainer" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1025.0
margin/bottom = 800.0
use_top_left = false

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 212.0
margin/top = 168.0
margin/right = 812.0
margin/bottom = 631.0
alignment = 0

[node name="RichTextLabel" type="RichTextLabel" parent="MainMenu/VBoxContainer"]

rect/min_size = Vector2( 600, 200 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 600.0
margin/bottom = 200.0
custom_fonts/normal_font = ExtResource( 2 )
bbcode/enabled = true
bbcode/bbcode = "[center]Sokoban Dungeon[/center]"
visible_characters = -1
percent_visible = 1.0

[node name="HSeparator" type="HSeparator" parent="MainMenu/VBoxContainer"]

visibility/opacity = 0.0
rect/min_size = Vector2( 0, 70 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 204.0
margin/right = 600.0
margin/bottom = 274.0

[node name="ButtonGroup" type="ButtonGroup" parent="MainMenu/VBoxContainer"]

rect/min_size = Vector2( 350, 0 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 278.0
margin/right = 600.0
margin/bottom = 463.0
alignment = 1

[node name="LevelSelectButton" parent="MainMenu/VBoxContainer/ButtonGroup" instance=ExtResource( 3 )]

editor/display_folded = true
anchor/right = 0
anchor/bottom = 0
margin/right = 600.0
margin/bottom = 80.0
toggle_mode = true
click_on_press = true

[node name="Patch9Frame" parent="MainMenu/VBoxContainer/ButtonGroup/LevelSelectButton"]

editor/display_folded = true

[node name="RichTextLabel" parent="MainMenu/VBoxContainer/ButtonGroup/LevelSelectButton/Patch9Frame/VBoxContainer"]

margin/right = 568.0
bbcode/bbcode = "[center]Select Level[/center]"

[node name="HSeparator" type="HSeparator" parent="MainMenu/VBoxContainer/ButtonGroup"]

visibility/opacity = 0.0
rect/min_size = Vector2( 0, 25 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 80.0
margin/right = 600.0
margin/bottom = 105.0

[node name="ExitButton" parent="MainMenu/VBoxContainer/ButtonGroup" instance=ExtResource( 3 )]

editor/display_folded = true
anchor/right = 0
anchor/bottom = 0
margin/top = 105.0
margin/right = 600.0
margin/bottom = 185.0
toggle_mode = true
click_on_press = true

[node name="RichTextLabel" parent="MainMenu/VBoxContainer/ButtonGroup/ExitButton/Patch9Frame/VBoxContainer"]

margin/right = 568.0
bbcode/bbcode = "[center]Exit[/center]"

[node name="PlayMenu" type="CenterContainer" parent="."]

editor/display_folded = true
visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = -960.0
margin/bottom = -736.0
use_top_left = false

[node name="VBoxContainer" type="VBoxContainer" parent="PlayMenu"]

rect/min_size = Vector2( 350, 0 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 337.0
margin/top = 279.0
margin/right = 687.0
margin/bottom = 521.0
alignment = 0

[node name="HBoxContainer" type="HBoxContainer" parent="PlayMenu/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 350.0
margin/bottom = 24.0
alignment = 0

[node name="RichTextLabel" type="RichTextLabel" parent="PlayMenu/VBoxContainer/HBoxContainer"]

rect/min_size = Vector2( 70, 20 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 70.0
margin/bottom = 24.0
bbcode/enabled = true
bbcode/bbcode = "Difficulty:"
visible_characters = -1
percent_visible = 1.0

[node name="DiffEdit" type="SpinBox" parent="PlayMenu/VBoxContainer/HBoxContainer"]

rect/min_size = Vector2( 50, 24 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 74.0
margin/top = 0.0
margin/right = 148.0
margin/bottom = 24.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = true
editable = true
prefix = ""
suffix = ""

[node name="RichTextLabel1" type="RichTextLabel" parent="PlayMenu/VBoxContainer/HBoxContainer"]

rect/min_size = Vector2( 70, 20 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 152.0
margin/top = 0.0
margin/right = 222.0
margin/bottom = 24.0
bbcode/enabled = true
bbcode/bbcode = "     Level:"
visible_characters = -1
percent_visible = 1.0

[node name="LevelEdit" type="SpinBox" parent="PlayMenu/VBoxContainer/HBoxContainer"]

rect/min_size = Vector2( 50, 24 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 226.0
margin/top = 0.0
margin/right = 300.0
margin/bottom = 24.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
editable = true
prefix = ""
suffix = ""

[node name="HSeparator1" type="HSeparator" parent="PlayMenu/VBoxContainer"]

visibility/opacity = 0.0
rect/min_size = Vector2( 0, 25 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 28.0
margin/right = 350.0
margin/bottom = 53.0

[node name="ButtonGroup" type="ButtonGroup" parent="PlayMenu/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 57.0
margin/right = 350.0
margin/bottom = 242.0
alignment = 0

[node name="StartGameBtn" parent="PlayMenu/VBoxContainer/ButtonGroup" instance=ExtResource( 3 )]

editor/display_folded = true
anchor/right = 0
anchor/bottom = 0
margin/right = 350.0
margin/bottom = 80.0
toggle_mode = true
click_on_press = true

[node name="RichTextLabel" parent="PlayMenu/VBoxContainer/ButtonGroup/StartGameBtn/Patch9Frame/VBoxContainer"]

margin/right = 318.0
bbcode/bbcode = "[center]Start Game[/center]"

[node name="HSeparator2" type="HSeparator" parent="PlayMenu/VBoxContainer/ButtonGroup"]

visibility/opacity = 0.0
rect/min_size = Vector2( 0, 25 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 80.0
margin/right = 350.0
margin/bottom = 105.0

[node name="PlayBackBtn" parent="PlayMenu/VBoxContainer/ButtonGroup" instance=ExtResource( 3 )]

editor/display_folded = true
anchor/right = 0
anchor/bottom = 0
margin/top = 105.0
margin/right = 350.0
margin/bottom = 185.0
toggle_mode = true
click_on_press = true

[node name="RichTextLabel" parent="PlayMenu/VBoxContainer/ButtonGroup/PlayBackBtn/Patch9Frame/VBoxContainer"]

margin/right = 318.0
bbcode/bbcode = "[center]Back[/center]"

[node name="DiffMenu" type="CenterContainer" parent="."]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 800.0
use_top_left = false

[node name="VBoxContainer" type="VBoxContainer" parent="DiffMenu"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 312.0
margin/top = 279.0
margin/right = 712.0
margin/bottom = 520.0
alignment = 0

[node name="RichTextLabel" type="RichTextLabel" parent="DiffMenu/VBoxContainer"]

rect/min_size = Vector2( 400, 65 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 400.0
margin/bottom = 65.0
custom_fonts/normal_font = ExtResource( 4 )
bbcode/enabled = true
bbcode/bbcode = "[center]Difficulty[/center]"
visible_characters = -1
percent_visible = 1.0

[node name="HSeparator" type="HSeparator" parent="DiffMenu/VBoxContainer"]

visibility/self_opacity = 0.0
rect/min_size = Vector2( 0, 40 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 69.0
margin/right = 400.0
margin/bottom = 109.0

[node name="DiffBtnContainer" type="GridContainer" parent="DiffMenu/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 113.0
margin/right = 400.0
margin/bottom = 193.0
custom_constants/vseparation = 30
custom_constants/hseparation = 30
columns = 5

[node name="StoneButton" parent="DiffMenu/VBoxContainer/DiffBtnContainer" instance=ExtResource( 3 )]

editor/display_folded = true
anchor/right = 0
anchor/bottom = 0
margin/right = 80.0
margin/bottom = 80.0

[node name="StoneButton 2" parent="DiffMenu/VBoxContainer/DiffBtnContainer" instance=ExtResource( 3 )]

anchor/right = 0
anchor/bottom = 0
margin/left = 110.0
margin/right = 190.0
margin/bottom = 80.0

[node name="StoneButton 3" parent="DiffMenu/VBoxContainer/DiffBtnContainer" instance=ExtResource( 3 )]

anchor/right = 0
anchor/bottom = 0
margin/left = 220.0
margin/right = 300.0
margin/bottom = 80.0

[node name="HSeparator1" type="HSeparator" parent="DiffMenu/VBoxContainer"]

visibility/self_opacity = 0.0
rect/min_size = Vector2( 0, 40 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 197.0
margin/right = 400.0
margin/bottom = 237.0

[node name="DiffBackBtn" parent="DiffMenu/VBoxContainer" instance=ExtResource( 3 )]

editor/display_folded = true
anchor/right = 0
anchor/bottom = 0
margin/top = 241.0
margin/right = 400.0
margin/bottom = 321.0
toggle_mode = true
click_on_press = true

[node name="RichTextLabel" parent="DiffMenu/VBoxContainer/DiffBackBtn/Patch9Frame/VBoxContainer"]

margin/right = 368.0
bbcode/bbcode = "[center]Back[/center]"

[node name="LevelMenu" type="ScrollContainer" parent="."]

editor/display_folded = true
visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 30.0
margin/top = 30.0
margin/right = -930.0
margin/bottom = -706.0
scroll/horizontal = false
scroll/vertical = true

[node name="CenterContainer" type="CenterContainer" parent="LevelMenu"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
use_top_left = false

[node name="VBoxContainer" type="VBoxContainer" parent="LevelMenu/CenterContainer"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 282.0
margin/top = 264.0
margin/right = 282.0
margin/bottom = 265.0
alignment = 0

[node name="RichTextLabel1" type="RichTextLabel" parent="LevelMenu/CenterContainer/VBoxContainer"]

anchor/right = 1
anchor/bottom = 1
rect/min_size = Vector2( 400, 55 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 156.0
custom_fonts/normal_font = ExtResource( 4 )
bbcode/enabled = true
bbcode/bbcode = "[center]Levels[/center]"
visible_characters = -1
percent_visible = 1.0

[node name="HSeparator1" type="HSeparator" parent="LevelMenu/CenterContainer/VBoxContainer"]

rect/min_size = Vector2( 0, 30 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 59.0
margin/right = 400.0
margin/bottom = 89.0

[node name="LevelBackBtn" parent="LevelMenu/CenterContainer/VBoxContainer" instance=ExtResource( 3 )]

editor/display_folded = true
margin/top = 93.0
margin/right = 0.0
margin/bottom = 38.0

[node name="RichTextLabel" parent="LevelMenu/CenterContainer/VBoxContainer/LevelBackBtn/Patch9Frame/VBoxContainer"]

margin/right = 368.0
bbcode/bbcode = "[center]Back[/center]"

[node name="HSeparator" type="HSeparator" parent="LevelMenu/CenterContainer/VBoxContainer"]

rect/min_size = Vector2( 0, 30 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 177.0
margin/right = 400.0
margin/bottom = 207.0

[node name="GridContainer" type="GridContainer" parent="LevelMenu/CenterContainer/VBoxContainer"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 211.0
margin/right = 0.0
margin/bottom = -80.0
custom_constants/vseparation = 30
custom_constants/hseparation = 30
columns = 5

[node name="StoneButton1" parent="LevelMenu/CenterContainer/VBoxContainer/GridContainer" instance=ExtResource( 3 )]

editor/display_folded = true
anchor/right = 0
anchor/bottom = 0
margin/right = 80.0
margin/bottom = 80.0

[node name="StoneButton2" parent="LevelMenu/CenterContainer/VBoxContainer/GridContainer" instance=ExtResource( 3 )]

editor/display_folded = true
anchor/right = 0
anchor/bottom = 0
margin/left = 110.0
margin/right = 190.0
margin/bottom = 80.0

[node name="StoneButton3" parent="LevelMenu/CenterContainer/VBoxContainer/GridContainer" instance=ExtResource( 3 )]

editor/display_folded = true
anchor/right = 0
anchor/bottom = 0
margin/left = 220.0
margin/right = 300.0
margin/bottom = 80.0

[connection signal="pressed" from="MainMenu/VBoxContainer/ButtonGroup/LevelSelectButton" to="." method="_on_LevelSelectButton_pressed"]

[connection signal="pressed" from="MainMenu/VBoxContainer/ButtonGroup/ExitButton" to="." method="_on_ExitButton_pressed"]

[connection signal="pressed" from="PlayMenu/VBoxContainer/ButtonGroup/StartGameBtn" to="." method="_on_StartGameBtn_pressed"]

[connection signal="pressed" from="PlayMenu/VBoxContainer/ButtonGroup/PlayBackBtn" to="." method="_on_PlayBackBtn_pressed"]

[connection signal="draw" from="DiffMenu" to="." method="_on_DiffMenu_draw"]

[connection signal="pressed" from="DiffMenu/VBoxContainer/DiffBackBtn" to="." method="_on_DiffBackBtn_pressed"]

[connection signal="pressed" from="LevelMenu/CenterContainer/VBoxContainer/LevelBackBtn" to="." method="_on_LevelBackBtn_pressed"]


[editable path="MainMenu/VBoxContainer/ButtonGroup/LevelSelectButton"]
[editable path="MainMenu/VBoxContainer/ButtonGroup/ExitButton"]
[editable path="PlayMenu/VBoxContainer/ButtonGroup/StartGameBtn"]
[editable path="PlayMenu/VBoxContainer/ButtonGroup/PlayBackBtn"]
[editable path="DiffMenu/VBoxContainer/DiffBackBtn"]
[editable path="LevelMenu/CenterContainer/VBoxContainer/LevelBackBtn"]
